--- a/index.html
+++ b/index.html
@@ -1,16 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="widht=device-width", initial-scale="1.0">
-    <title>Variavel</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <title>Portfolio website</title>
+    </head>
 <body>
-    <input type="text" id="userInput"></input>
-    <button onclick="armazenarvalor ()">armazenar</button>
-    <p id="valorInserido"></p>
+    <div class="background">
+        <nav>
+            <h2 class="logo">Portfolio</h2>
+            <ul class="cabecalho">
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Sobre Mim</a></li>
+                <li><a href="#">Serviços</a></li>
+                <li><a href="#">Habilidades</a></li>
+                <li><a href="#">Contato</a></li>
+            </ul>
+        </nav>
 
-    <script src="script.js"></script>
+        <div class="main">
+            <h4>Olá, meu nome é</h4>
+            <h1>João Leonardo</h1>
+            <h3>Desenvolvedor especializado em JavaScript, Python e SQL.</h3> 
+            <h3>Soluções eficientes e personalizadas.</h3>
+            <div class="Container-btn">
+                <p class="subtitle">
+                    Atuo como desenvolvedor especializado em JavaScript, Python e SQL.
+                <p class="subtitle">
+                    Criando soluções eficientes para aplicações e projetos.
+                </p>
+                </p>
+                <p class="subtitle">
+                    Estou em constante aprimoramento de minhas habilidades técnicas.
+                </p>
+                <p class="subtitle">
+                    Podemos nos conhecer melhor?
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <section class="background-color-sobre" id="sobre">
+        <div class="main-sobre">
+            <img src="img/profile.jpeg" alt=>
+            <div class="Text-sobre">
+                <h2>Sobre mim</h2>
+                <h5>Desenvolvedor de software</h5>
+                <p>"Sou João Leonardo, profissional especializado em desenvolvimento de soluções com Python e JavaScript.</p>
+                <p>Tenho experiência no desenvolvimento de software, na gestão de bancos de dados e na criação de aplicações.</p>
+                <button type="button"><a href="https://github.com/joaomangini" class="decoration">Vomos conversar?</a></button>
+            </div>
+        </div>
+    </section>
+
+    <div class="Container-servicos" id="services">
+        <div class="title">
+            <h2>Minhas habilidades</h2>
+        </div>
+
+        <div class="Caixa" id="habilidades">
+            <div class="Card">
+                <i class="fas fa-bars"></i>
+                <h5>Desenvolvedor Javascript, Python</h5>
+                <div class="Paragrafo-button">
+                    <p>Precisa de um desenvolvedor em JavaScript e Python? Desenvolvo sites modernos e personalizados, a opção ideal para o seu negócio!</p>
+                    <button type="button"><a href="https://www.linkedin.com/in/joao-leonardo-948392207/" class="decoration">Você pode saber mais aqui!</a></button>
+                </div>
+            </div>
+        </div>
+        <div class="Caixa" id="habilidades">
+            <div class="Card">
+                <i class="fas fa-bars"></i>
+                <h5>Programador</h5>
+                <div class="Paragrafo-button">
+                    <p>Quer tirar sua ideia do papel e ter sua própria aplicação? Desenvolvo apps sob medida para o seu projeto. Vamos conversar?</p>
+                    <button type="button"><a href="https://www.linkedin.com/in/joao-leonardo-948392207/" class="decoration">Você pode saber mais aqui!</a></button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="me-contate" id="contato">
+        <p>Gostaria de agendar uma conversa?</p>
+        <button type="button"><a href="https://wa.link/" class="decoration">Enviar mensagem</a></button>
+    </div>
+
+    <footer>
+        <h6>João Leonardo</h6>
+        <div class="Redes-sociais">
+            <a href="https://www.linkedin.com/in/joao-leonardo-948392207/"><i class="fab fa-linkedin"></i></a>
+        </div>
+        <p class="end">Copyright By JLmangini</p>
+    </footer>
 </body>
 </html>
-
